--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodWastageManagement">
-        <activity android:name=".RegisterUser"
+        <activity android:name=".ProfileActivity"></activity>
+        <activity
+            android:name=".RegisterUser"
             android:label="RegisterUser Activity"
             android:parentActivityName=".MainActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.steph.foodwastagemanagement.MainActivity"/>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.steph.foodwastagemanagement.MainActivity" />
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
