--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.steph.foodwastagemanagement">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodWastageManagement">
-        <activity
-            android:name=".ProfileActivity"></activity>
+        <activity android:name=".ChildrensHome"></activity>
+        <activity android:name=".EventOrganiser" />
+        <activity android:name=".RestaurantManager" />
+        <activity android:name=".ForgotPassword" />
+        <activity android:name=".ProfileActivity" />
         <activity
             android:name=".RegisterUser"
             android:label="RegisterUser Activity"
