--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.steph.foodwastagemanagement">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodWastageManagement">
-        <activity android:name=".ChildrensHome"></activity>
+        <activity android:name=".EditProfile"/>
+        <activity android:name=".ChildrensHome" />
         <activity android:name=".EventOrganiser" />
         <activity android:name=".RestaurantManager" />
         <activity android:name=".ForgotPassword" />
