--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-
     package="com.steph.foodwastagemanagement">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
-        android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FoodWastageManagement"
-        tools:replace="android:appComponentFactory">
+        android:theme="@style/Theme.FoodWastageManagement">
         <activity android:name=".EditProfile"/>
         <activity android:name=".ChildrensHome" />
         <activity android:name=".EventOrganiser" />
